[package]
name = "oxidrive"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
tokio = "1.44.2"
dotenv = "0.15.0"
sqlx = { version = "0.8.5", features = ["mysql", "runtime-tokio-native-tls"] }

serde = "1.0.219"
serde_json = "1.0.140"

argon2 = "0.6.0-pre.1"

uuid = { version = "1.16.0", features = ["v4"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.9"